# SMWCS

./: .env.example  .gitignore  README.md  docker-compose.yml  logs.sh  requirements.txt  start.sh  status.sh  stop.sh
apps/dashboard/: index.html  package-lock.json  package.json  vite.config.js
apps/dashboard/src/: App.jsx  api.js  index.css  main.jsx  store.js
apps/dashboard/src/components/: Sidebar.jsx
apps/dashboard/src/pages/: Alerts.jsx  Bins.jsx  Dashboard.jsx  Drivers.jsx  Fleet.jsx  Login.jsx
apps/driver-terminal-app/: App.js  app.json  package-lock.json  package.json
apps/driver-terminal-app/src/: config.js
apps/driver-terminal-app/src/screens/: HomeScreen.js  LoginScreen.js  MapScreen.js  ProfileScreen.js  StatusScreen.js
apps/driver-terminal-app/src/services/: websocket.js
apps/driver-terminal-app/src/store/: useStore.js
docs/: AGENTS.md  CHANGELOG.md  OPERATIONS.md  api_reference.md  project_context.md  remaining_work.md  system.md
scripts/: setup_osrm.sh
services/alert-service/: pyproject.toml
services/alert-service/app/: config.py  database.py  kafka_publisher.py  main.py  models.py  rules.py
services/analytics-service/: celerybeat-schedule.bak  celerybeat-schedule.dir  pyproject.toml
services/analytics-service/app/: celery_app.py  config.py
services/analytics-service/app/tasks/: aggregation.py  driver_kpis.py  reports.py
services/auth-service/: create_admin.py  pyproject.toml
services/auth-service/app/: config.py  main.py
services/auth-service/app/core/: deps.py  security.py
services/auth-service/app/routers/: auth.py  users.py
services/auth-service/app/schemas/: auth.py
services/bin-registry/: pyproject.toml
services/bin-registry/app/: config.py  main.py
services/bin-registry/app/core/: deps.py
services/bin-registry/app/routers/: bins.py  zones.py
services/bin-registry/app/schemas/: bin.py
services/citizen-api/: pyproject.toml
services/citizen-api/app/: config.py  database.py  main.py
services/citizen-api/app/core/: deps.py  security.py
services/citizen-api/app/kafka/: publisher.py
services/citizen-api/app/routers/: auth.py  reports.py  schedule.py  trucks.py
services/command-api/: pyproject.toml
services/command-api/app/: config.py  database.py  main.py
services/command-api/app/core/: deps.py
services/command-api/app/routers/: alerts.py  analytics.py  fleet.py  websocket.py
services/command-api/app/services/: broadcaster.py  kafka_consumer.py
services/driver-terminal/: pyproject.toml
services/driver-terminal/app/: config.py  main.py  models.py
services/driver-terminal/app/kafka/: publisher.py  route_consumer.py
services/driver-terminal/app/routers/: terminal.py
services/driver-terminal/app/services/: connection_manager.py
services/fleet-service/: pyproject.toml
services/fleet-service/app/: config.py  database.py  main.py
services/fleet-service/app/core/: deps.py
services/fleet-service/app/routers/: drivers.py  shifts.py  trucks.py
services/fleet-service/app/schemas/: fleet.py
services/iot-ingestion/: pyproject.toml
services/iot-ingestion/app/: config.py  handlers.py  influx_writer.py  kafka_publisher.py  main.py  schemas.py
services/media-service/: pyproject.toml
services/media-service/app/: config.py  main.py
services/media-service/app/core/: deps.py
services/route-engine/: pyproject.toml
services/route-engine/app/: config.py  database.py  main.py  models.py
services/route-engine/app/core/: deps.py
services/route-engine/app/kafka/: consumer.py  publisher.py
services/route-engine/app/routers/: routes.py
services/route-engine/app/solver/: cvrp.py  distance.py  state.py
